# polarpy

./: .gitattributes  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: test.yml
ci/: test.sh
examples/: file_conversion.ipynb  polar_demo.ipynb
polarpy/: __init__.py  _version.py  modulation_curve_file.py  polar2hdf5.py  polar_data.py  polar_response.py  polarlike.py
polarpy/test/: test_file_conversion.py  test_modulation_curve_file.py  test_polarlike.py
